<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">#findmybikes</string>
    <string name="appbar_title_formatting" translatable="false">%1$s&lt;u>%2$s&lt;/u>%3$s</string>
    <string name="appbar_title_prefix">#findmy</string>
    <string name="appbar_title_postfix">bikes</string>
    <string name="appbar_subtitle_formatted">&lt;i>in %1$s&lt;/i></string>
    <string name="favorites_sheet_header">Favorites - &lt;b>%1$s&lt;/b></string>
    <string name="hashtag_settings">#settings</string>
    <string name="hashtag_about">#about</string>
    <string name="fromCitibik_es">from citybik.es</string>
    <string name="moments">Moments</string>
    <string name="min_abbreviated">min</string>
    <string name="favorite_removed">#favorite removed</string>
    <string name="favorite_added">#favorite added</string>
    <string name="such_short_trip">#you don\'t need me for such a short trip ! ;)</string>
    <string name="bikes">#bikes</string>
    <string name="docks">#docks</string>
    <string name="b_tab_question">#where are we going today ?</string>
    <string name="station_recap_bikes">#bikes: %1$d</string>
    <string name="downloading">#downloading data…</string>
    <string name="nextUpdate">Next update</string>
    <string name="no_connectivity">connected #not</string>
    <string name="refreshing_map">#refreshing map…</string>
    <string name="auto_download_failed">#download failed :/ Auto update paused.</string>
    <string name="google_maps_not_installed">Google Maps not installed !</string>
    <string name="out_of_bounds">#out of current system service area</string>
    <string name="searching_bike_network">#searching nearest bike system on citybik.es…</string>
    <string name="bike_network_found_message"><![CDATA[#bike system been set to <b>%1$s</b>.<br />I\'ll update it if you travel.]]></string>
    <string name="searching_wait_location">#waiting on location…</string>
    <string name="hello_city"><![CDATA[%1$s#hello <b>%2$s</b> !]]></string>
    <string name="hello_travel">#it seems you travelled.\u0020</string>
    <!-- TODO: add 'OK but delete favorites for [OLD NETWORK]' -->
    <string name="bike_network_change_message"><![CDATA[I\'ve changed your bike network to <b>%1$s</b>.<br />I also saved your favorites for <i>%2$s</i>.]]></string>
    <string name="locked">Locked</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="status_string">%1$s ago from citybik.es - %2$s</string>
    <string name="il_y_a" />
    <string name="pref_availability_settings_dialog_title">Availability settings</string>
    <string name="pref_availability_cri_min_label" translatable="false">%1$d -- </string>
    <string name="pref_availability_bad_min_label" translatable="false">@string/pref_availability_cri_min_label</string>
    <string name="pref_availability_great_min_label" translatable="false">%1$d+</string>
    <string name="pref_availability_critical_hint">Treated as empty in tab A or full in tab B</string>
    <string name="pref_manual_refresh_mode">Automatic refresh</string>
    <string name="pref_manual_refresh_mode_manual">OFF - Pull to refresh only.</string>
    <string name="pref_manual_refresh_mode_all">ON - Every 5 minutes + pull to refresh.</string>
    <string name="pref_refresh_options_key" translatable="false">pref_refresh_options</string>
    <string name="pref_critical_availability_max_key" translatable="false">pref_critical_availability_max</string>
    <string name="pref_bad_availability_max_key" translatable="false">pref_bad_availability_max</string>
    <string name="hour_abbreviated">h</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <!--<string name="undo">@android:string/undo</string> NOT PUBLIC -->
    <string name="undo"><b>UNDO</b></string>
    <string name="no_favorite">No favorite for &lt;b>%1$s&lt;/b></string>
    <string name="favorite_display_name_only_bold" translatable="false">&lt;b>%1$s&lt;/b></string>
    <string name="favorite_display_name_only_italic" translatable="false">&lt;i>%1$s&lt;/i></string>
    <string name="favorite_display_name_complete" translatable="false"><![CDATA[<b>%1$s</b><br><i>%2$s</i>]]></string>
    <string name="resume">RESUME</string>
    <string name="auto_bike_select_finding">#finding your bikes. Hang tight…</string>
    <string name="auto_bike_select_found">#found your bike ! :)</string>
    <string name="auto_bike_select_none">#couldn\'t find any bike ! :s #selected nearest station.</string>
    <string name="auto_bike_select_outdated">#obsolete data ! :| #selected nearest station.</string>
    <string name="twitter_not_closest_bike_data_format" translatable="false">%1$s bike is not closest! Bikes:%2$d %3$s at %4$s %5$s walk %6$s %7$s</string>
    <string name="twitter_closer_discarded_reply_data_format" translatable="false">%1$s discarded closer! Bikes:%2$d %3$s at %4$s %5$s</string>
    <string name="trip_details_share_message_content">I will be at the %1$s station %2$s in %3$s ! Shared via #findmybikes</string>
    <string name="hashtag_privacy">#privacy</string>
    <string name="hashtag_data">#data</string>
    <string name="hashtag_source">#source</string>
    <string name="manual_download_failed">#download failed :/</string>
    <string name="retry">RETRY</string>
    <string name="hashtag_notices">#notices</string>
    <string name="trip_details_share_title">Share trip duration with…</string>
    <string name="hashtag_cities">#cities</string>
    <string name="onboarding_showcase_search_title">#where to ?</string>
    <string name="onboarding_showcase_search_text">Let\'s bike from A to B.\n\nYou have no favorites ! To get started, tap the search button and enter a place name or address…</string>
    <string name="onboarding_showcase_total_time_title" tools:ignore="TypographyFractions">#tip 1/2</string>
    <string name="onboarding_showcase_total_time_text">\nBam ! View your trip time estimate based on %1$s dock availability around %2$s…</string>
    <string name="onboarding_showcase_add_favorite_title" tools:ignore="TypographyFractions">#tip 2/2</string>
    <string name="onboarding_showcase_add_favorite_text">\nAlmost done ! Add a favorite by tapping this heart shaped button.</string>
    <string name="onboarding_hint_main_choice">#open favorites, use search, or tap station</string>
    <string name="onboarding_hint_main_choice_no_connectivity">#open favorites or tap station</string>
    <string name="onboarding_hint_tap_favorite_name">#tap name to set as destination, #swipe to delete</string>
    <string name="onboarding_hint_search">#type any place name or address</string>
    <string name="hashtag_rate">#rate</string>
    <string name="hashtag_like">#like</string>
    <string name="hashtag_feedback">#feedback</string>
    <string name="feedback_subject">I have something to say !</string>
    <string name="location_please">#pretty please :)</string>
    <string name="location_rationale">#\'location\' permission required to find your bikes !</string>
    <string name="settings">SETTINGS</string>
    <string name="location_turn_on">#location service required to find your bikes !</string>
    <string name="sad_emoji" translatable="false">:\'(</string>
    <string name="availability_hint_never">Bikes or docks are never broken</string>
    <string name="availability_hint_sometime">Bikes or docks are sometime broken</string>
    <string name="availability_hint_often">Bikes or docks are often broken</string>
    <string name="availability_hint_veryoften">Bikes or docks are very often broken</string>
    <string name="connectivity_rationale">#internet connection required for initial setup !</string>
    <string name="onboarding_showcase_itinerary_title">#last tip</string>
    <string name="onboarding_showcase_itinerary_favorite_text">To view your itinerary and a more precise time estimate in Google Maps, use the \'directions\' buttons. Press back when done.</string>

    <string name="prompt_cozy" translatable="false">username or custom domain</string>
    <string name="client_info_default" translatable="false">Tap \'Register\'</string>
    <string name="action_registering" translatable="false">Register</string>
    <string name="tap_authenticate" translatable="false">Tap \'Authenticate\'</string>
    <string name="authenticate" translatable="false">AUTHENTICATE</string>
    <string name="cozy_test" translatable="false">TEST</string>
    <string name="registration_failed" translatable="false">"Registration failed"</string>
    <string name="action_unregistering" translatable="false">Unregister</string>
    <string name="pref_cozy_login_dialog_title" translatable="false">Cozy cloud setup</string>
    <string name="open_app">open app</string>
    <string name="cancel_tracing">cancel</string>
    <string name="location_updated"><![CDATA[<string name=\"location_updated\">Location Updated: %1$s</string>]]></string>
</resources>
